--- a/table.html
+++ b/table.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -64,4 +64,4 @@
       </tfoot>
     </table>
   </body>
-</html>
+</html> -->
